--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -1,1 +1,13 @@
+<div class="text-center mt-3 mb-3">
+  <form>
+    <input
+      class="rounded"
+      type="search"
+      placeholder="Search..."
+      autofocus
+      (keyup)="filter = $event.target.value">
+  </form>
+</div>
 <ap-photos [photos]="photos"></ap-photos>
+
+
