Implementação de resolver

--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -8,6 +8,6 @@
       (keyup)="filter = $event.target.value">
   </form>
 </div>
-<ap-photos [photos]="photos"></ap-photos>
+<ap-photos [photos]="photos | filterByDescription: filter"></ap-photos>
 
 
