--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -9,5 +9,8 @@
   </form>
 </div>
 <ap-photos [photos]="photos | filterByDescription: filter"></ap-photos>
-
+<ap-load-button
+  [hasMore]="hasMore"
+  (click)="load()"
+  ></ap-load-button>
 
