--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -1,3 +1,4 @@
+<h1 style="background: red" apDarkenOnHover brightness="20%">Photos</h1>
 <ap-search
   (onTyping)="filter = $event"
   [value]="filter"
