--- a/src/app/home/signin/signin.component.html
+++ b/src/app/home/signin/signin.component.html
@@ -1,15 +1,17 @@
 <h4 class="text-center">Login</h4>
 
-<form class="form mt-4">
+<form [formGroup]="loginForm" class="form mt-4">
   <div class="form-group">
-    <input class="form-control" placeholder="user name" autofocus>
+    <input formControlName="userName" class="form-control" placeholder="user name" autofocus>
+    <small *ngIf="loginForm.get('userName').errors?.required" class="text-danger d-block mt-2">User name is required</small>
   </div>
 
   <div class="form-group">
-    <input class="form-control" type="password" placeholder="password">
+    <input formControlName="password" class="form-control" type="password" placeholder="password">
+    <small *ngIf="loginForm.get('password').errors?.required" class="text-danger d-block mt-2">Password is required</small>
   </div>
 
-  <button type="submit" class="btn btn-primary btn-block">login</button>
+  <button [disabled]="loginForm.invalid" type="submit" class="btn btn-primary btn-block">login</button>
 </form>
 
 <p>Not a user?<a>Register now</a></p>
