--- a/src/app/home/signin/signin.component.html
+++ b/src/app/home/signin/signin.component.html
@@ -3,12 +3,12 @@
 <form [formGroup]="loginForm" class="form mt-4">
   <div class="form-group">
     <input formControlName="userName" class="form-control" placeholder="user name" autofocus>
-    <small *ngIf="loginForm.get('userName').errors?.required" class="text-danger d-block mt-2">User name is required</small>
+    <ap-vmessage *ngIf="loginForm.get('userName').errors?.required" text="User name is required"></ap-vmessage>
   </div>
 
   <div class="form-group">
     <input formControlName="password" class="form-control" type="password" placeholder="password">
-    <small *ngIf="loginForm.get('password').errors?.required" class="text-danger d-block mt-2">Password is required</small>
+    <ap-vmessage *ngIf="loginForm.get('password').errors?.required" text="Password is required"></ap-vmessage>
   </div>
 
   <button [disabled]="loginForm.invalid" type="submit" class="btn btn-primary btn-block">login</button>
