--- a/src/app/home/signin/signin.component.html
+++ b/src/app/home/signin/signin.component.html
@@ -1,6 +1,6 @@
 <h4 class="text-center">Login</h4>
 
-<form [formGroup]="loginForm" class="form mt-4">
+<form [formGroup]="loginForm" class="form mt-4" (submit)="login()">
   <div class="form-group">
     <input formControlName="userName" class="form-control" placeholder="user name" autofocus>
     <ap-vmessage *ngIf="loginForm.get('userName').errors?.required" text="User name is required"></ap-vmessage>
