--- a/src/app/home/sigup/signup.component.html
+++ b/src/app/home/sigup/signup.component.html
@@ -1,19 +1,31 @@
 <h4 class="text-center">Register to embrace a new world"</h4>
 <form [formGroup]="signupForm" class="form mt-4">
   <div class="form-group">
-    <input class="form-control" placeholder="email" autofocus>
+    <input formControlName="email" class="form-control" placeholder="email" autofocus>
+    <ap-vmessage *ngIf="signupForm.get('email').errors?.required" text="Email is required"></ap-vmessage>
+    <ap-vmessage *ngIf="signupForm.get('email').errors?.email" text="Invalid e-mail"></ap-vmessage>
   </div>
 
   <div class="form-group">
-    <input class="form-control" placeholder="full name">
+    <input formControlName="fullName" class="form-control" placeholder="full name">
+    <ap-vmessage *ngIf="signupForm.get('fullName').errors?.required" text="Full name is required"></ap-vmessage>
+    <ap-vmessage *ngIf="signupForm.get('fullName').errors?.minlength" text="Minimun length is 2"></ap-vmessage>
+    <ap-vmessage *ngIf="signupForm.get('fullName').errors?.maxlength" text="Maximum length is 40"></ap-vmessage>
   </div>
 
   <div class="form-group">
-    <input class="form-control" placeholder="user name">
+    <input formControlName="userName" class="form-control" placeholder="user name">
+    <ap-vmessage *ngIf="signupForm.get('userName').errors?.required" text="User name is required"></ap-vmessage>
+    <ap-vmessage *ngIf="signupForm.get('userName').errors?.pattern" text="Must be lower case"></ap-vmessage>
+    <ap-vmessage *ngIf="signupForm.get('userName').errors?.minlength" text="Minimun length is 2"></ap-vmessage>
+    <ap-vmessage *ngIf="signupForm.get('userName').errors?.maxlength" text="Maximum length is 30"></ap-vmessage>
   </div>
 
   <div class="form-group">
-    <input type="password" class="form-control" placeholder="password">
+    <input formControlName="password" type="password" class="form-control" placeholder="password">
+    <ap-vmessage *ngIf="signupForm.get('password').errors?.required" text="Password is required"></ap-vmessage>
+    <ap-vmessage *ngIf="signupForm.get('password').errors?.minlength" text="Minimun length is 8"></ap-vmessage>
+    <ap-vmessage *ngIf="signupForm.get('password').errors?.maxlength" text="Maximum length is 14"></ap-vmessage>
   </div>
 
   <button class="btn btn-primary btn-block">Register</button>
