--- a/src/app/home/signin/signin.component.html
+++ b/src/app/home/signin/signin.component.html
@@ -14,4 +14,4 @@
   <button [disabled]="loginForm.invalid" type="submit" class="btn btn-primary btn-block">login</button>
 </form>
 
-<p>Not a user?<a>Register now</a></p>
+<p>Not a user?  <a [routerLink]="['signup']">Register now</a></p>
