--- a/src/app/home/sigup/signup.component.html
+++ b/src/app/home/sigup/signup.component.html
@@ -1,7 +1,7 @@
-<h4 class="text-center">Register to embrace a new world"</h4>
+<h4 class="text-center">Register to embrace a new world!</h4>
 <form [formGroup]="signupForm" class="form mt-4" (submit)="signup()">
   <div class="form-group">
-    <input formControlName="email" class="form-control" placeholder="email" autofocus>
+    <input #emailInput formControlName="email" class="form-control" placeholder="email" autofocus>
     <ap-vmessage *ngIf="signupForm.get('email').errors?.required" text="Email is required"></ap-vmessage>
     <ap-vmessage *ngIf="signupForm.get('email').errors?.email" text="Invalid e-mail"></ap-vmessage>
   </div>
