--- a/src/app/photos/photo-form/photo-form.component.html
+++ b/src/app/photos/photo-form/photo-form.component.html
@@ -1,20 +1,37 @@
 <div class="container">
-  <form [formGroup]="formGroupTmp" class="row">
+  <form [formGroup]="photoForm" class="row" (submit)="upload()">
     <div class="col-md-6 text-center">
-      <input type="file" accept="image/*">
+      <input
+        formControlName="file"
+        type="file"
+        accept="image/*"
+        (change)="file = $event.target.files[0]"
+        >
+      <ap-vmessage
+        text="Please, select a photo"
+        *ngIf="photoForm.get('file').errors?.required"
+        >
+      </ap-vmessage>
     </div>
     <div class="col-md-6">
       <div class="form-group">
         <textarea
+          formControlName="description"
           class="form-control form-control-sm"
-          placeholder="photo description"></textarea>
+          placeholder="photo description"
+        ></textarea>
+        <ap-vmessage
+          text="Max length is 300"
+          *ngIf="photoForm.get('description').errors?.maxlength"
+          >
+        </ap-vmessage>
       </div>
       <div class="form-group">
         <label class="text-muted">Allow comments
-          <input type="checkbox">
+          <input formControlName="allowComments" type="checkbox">
         </label>
       </div>
-      <button type="submit" class="btn btn-primary btn-block">
+      <button [disabled]="photoForm.invalid" type="submit" class="btn btn-primary btn-block">
         Upload
       </button>
       <a class="btn btn-secondary btn-block">Cancel</a>
