--- a/src/app/photos/photo-form/photo-form.component.html
+++ b/src/app/photos/photo-form/photo-form.component.html
@@ -4,7 +4,7 @@
       <div class="form-group"
         *ngIf="!preview; else previewImage"
         >
-        <button type="button" (click)="fileInput.click()" class="btn btn-primary">
+        <button immediateClick type="button" (click)="fileInput.click()" class="btn btn-primary">
           <i class="fa fa-image fa-4x align-middle"></i>
         </button>
         <input
