--- a/src/app/photos/photo-details/photo-details.component.html
+++ b/src/app/photos/photo-details/photo-details.component.html
@@ -10,7 +10,13 @@
         <hr>
       </small>
 
-      <ap-photo-comments [photoId]="photoId"></ap-photo-comments>
+      <ap-photo-comments
+        [photoId]="photoId"
+        *ngIf="photo.allowComments; else warning">
+      </ap-photo-comments>
+      <ng-template #warning>
+        <p>User has disabled comments for this photo.</p>
+      </ng-template>
     </div>
   </div>
 </div>
