--- a/src/app/photos/photo-list/photos/photos.component.html
+++ b/src/app/photos/photo-list/photos/photos.component.html
@@ -5,7 +5,9 @@
   <li *ngFor="let cols of rows" class="row no-gutters">
     <div *ngFor="let photo of cols"class="col-4" apDarkenOnHover>
       <a [routerLink]="['/p', photo.id]">
-        <ap-card [title]="photo.description">
+        <ap-card
+        >
+          <!-- [title]="photo.description" -->
           <ap-photo
             [url]="photo.url"
             [description]="photo.description">
