--- a/src/app/photos/photo-form/photo-form.component.html
+++ b/src/app/photos/photo-form/photo-form.component.html
@@ -45,10 +45,18 @@
           <input formControlName="allowComments" type="checkbox">
         </label>
       </div>
-      <button [disabled]="photoForm.invalid" type="submit" class="btn btn-primary btn-block">
-        Upload
-      </button>
-      <a class="btn btn-secondary btn-block">Cancel</a>
+
+      <div *ngIf="!percentDone; else percent">
+        <button [disabled]="photoForm.invalid" type="submit" class="btn btn-primary btn-block">
+          Upload
+        </button>
+        <a [routerLink]="['']" class="btn btn-secondary btn-block">Cancel</a>
+      </div>
     </div>
+    <ng-template #percent>
+      <div class="text-center display-4">
+        uploading {{ percentDone }}%
+      </div>
+    </ng-template>
   </form>
 </div>
