--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -6,9 +6,10 @@
     </a>
 
     <ap-menu #menu>
-      <ul>
-        <li>Menu item 1</li>
-        <li>Menu item 2</li>
+      <ul class="list-unstyled">
+        <li>
+          <a showIfLogged [routerLink]="['p','add']">Upload</a>
+        </li>
       </ul>
     </ap-menu>
 
