--- a/src/app/home/sigup/signup.component.html
+++ b/src/app/home/sigup/signup.component.html
@@ -2,33 +2,33 @@
 <form #form="ngForm" [formGroup]="signupForm" class="form mt-4" (submit)="signup()">
   <div class="form-group">
     <input #emailInput formControlName="email" class="form-control" placeholder="email" autofocus>
-    <ap-vmessage *ngIf="signupForm.get('email').errors?.required && form.submitted" text="Email is required"></ap-vmessage>
-    <ap-vmessage *ngIf="signupForm.get('email').errors?.email && form.submitted" text="Invalid e-mail"></ap-vmessage>
+    <ap-vmessage *ngIf="signupForm.get('email').errors?.required && (form.submitted || signupForm.get('email').touched)" text="Email is required"></ap-vmessage>
+    <ap-vmessage *ngIf="signupForm.get('email').errors?.email && (form.submitted || signupForm.get('email').touched)" text="Invalid e-mail"></ap-vmessage>
   </div>
 
   <div class="form-group">
     <input formControlName="fullName" class="form-control" placeholder="full name">
-    <ap-vmessage *ngIf="signupForm.get('fullName').errors?.required && form.submitted" text="Full name is required"></ap-vmessage>
-    <ap-vmessage *ngIf="signupForm.get('fullName').errors?.minlength && form.submitted" text="Minimun length is 2"></ap-vmessage>
-    <ap-vmessage *ngIf="signupForm.get('fullName').errors?.maxlength && form.submitted" text="Maximum length is 40"></ap-vmessage>
+    <ap-vmessage *ngIf="signupForm.get('fullName').errors?.required && (form.submitted || signupForm.get('fullName').touched)" text="Full name is required"></ap-vmessage>
+    <ap-vmessage *ngIf="signupForm.get('fullName').errors?.minlength && (form.submitted || signupForm.get('fullName').touched)" text="Minimun length is 2"></ap-vmessage>
+    <ap-vmessage *ngIf="signupForm.get('fullName').errors?.maxlength && (form.submitted || signupForm.get('fullName').touched)" text="Maximum length is 40"></ap-vmessage>
   </div>
 
   <div class="form-group">
     <input formControlName="userName" class="form-control" placeholder="user name">
-    <ap-vmessage *ngIf="signupForm.get('userName').errors?.required && form.submitted" text="User name is required"></ap-vmessage>
+    <ap-vmessage *ngIf="signupForm.get('userName').errors?.required && (form.submitted || signupForm.get('userName').touched)" text="User name is required"></ap-vmessage>
     <!-- <ap-vmessage *ngIf="signupForm.get('userName').errors?.pattern" text="Must be lower case"></ap-vmessage> -->
-    <ap-vmessage *ngIf="signupForm.get('userName').errors?.lowerCase && form.submitted" text="Must be lower case"></ap-vmessage>
-    <ap-vmessage *ngIf="signupForm.get('userName').errors?.minlength && form.submitted" text="Minimun length is 2"></ap-vmessage>
-    <ap-vmessage *ngIf="signupForm.get('userName').errors?.maxlength && form.submitted" text="Maximum length is 30"></ap-vmessage>
+    <ap-vmessage *ngIf="signupForm.get('userName').errors?.lowerCase && (form.submitted || signupForm.get('userName').touched)" text="Must be lower case"></ap-vmessage>
+    <ap-vmessage *ngIf="signupForm.get('userName').errors?.minlength && (form.submitted || signupForm.get('userName').touched)" text="Minimun length is 2"></ap-vmessage>
+    <ap-vmessage *ngIf="signupForm.get('userName').errors?.maxlength && (form.submitted || signupForm.get('userName').touched)" text="Maximum length is 30"></ap-vmessage>
     <ap-vmessage *ngIf="signupForm.get('userName').errors?.userNameTaken" text="Username already taken"></ap-vmessage>
     <small *ngIf="signupForm.get('userName').valid" class="text-success">User available!</small>
   </div>
 
   <div class="form-group">
     <input formControlName="password" type="password" class="form-control" placeholder="password">
-    <ap-vmessage *ngIf="signupForm.get('password').errors?.required && form.submitted" text="Password is required"></ap-vmessage>
-    <ap-vmessage *ngIf="signupForm.get('password').errors?.minlength && form.submitted" text="Minimun length is 8"></ap-vmessage>
-    <ap-vmessage *ngIf="signupForm.get('password').errors?.maxlength && form.submitted" text="Maximum length is 14"></ap-vmessage>
+    <ap-vmessage *ngIf="signupForm.get('password').errors?.required && (form.submitted || signupForm.get('password').touched)" text="Password is required"></ap-vmessage>
+    <ap-vmessage *ngIf="signupForm.get('password').errors?.minlength && (form.submitted || signupForm.get('password').touched)" text="Minimun length is 8"></ap-vmessage>
+    <ap-vmessage *ngIf="signupForm.get('password').errors?.maxlength && (form.submitted || signupForm.get('password').touched)" text="Maximum length is 14"></ap-vmessage>
   </div>
 
   <button class="btn btn-primary btn-block">Register</button>
